--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -18,7 +18,7 @@
   // }
 
    /** primary **/
-   --ion-color-primary: #303F9F;
+   --ion-color-primary: rgb(135, 2, 2);
    --ion-color-primary-rgb: 48,63,159;
    --ion-color-primary-contrast: #ffffff;
    --ion-color-primary-contrast-rgb: 255,255,255;
@@ -26,7 +26,7 @@
    --ion-color-primary-tint: #4552a9;
  
    /** secondary **/
-   --ion-color-secondary: #3F51B5;
+   --ion-color-secondary: rgb(201, 50, 50);
    --ion-color-secondary-rgb: 63,81,181;
    --ion-color-secondary-contrast: #ffffff;
    --ion-color-secondary-contrast-rgb: 255,255,255;
