--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,15 +1,15 @@
 <ion-header>
-    <ion-toolbar color="primary">
-        <ion-buttons slot="start">
-            <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title>Home</ion-title>
-    </ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>🚀 Home</ion-title>
+  </ion-toolbar>
 </ion-header>
 <ion-content padding>
-    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
-        <ion-refresher-content></ion-refresher-content>
-    </ion-refresher>
-    <app-skeleton *ngIf="!launch"></app-skeleton>
-    <app-countdown [launch]="launch"></app-countdown>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <app-skeleton *ngIf="!launch"></app-skeleton>
+  <app-countdown [launch]="launch"></app-countdown>
 </ion-content>
