--- a/src/app/components/launch/launch.component.html
+++ b/src/app/components/launch/launch.component.html
@@ -1,24 +1,30 @@
 <div [@fadeIn] *ngIf="launches">
-  <ion-list >
+  <ion-list>
     <ion-item-sliding *ngFor="let l of launches">
       <ion-item-options side="start">
         <ion-item-option>Favorite</ion-item-option>
       </ion-item-options>
-      <ion-item>
+      <ion-item button (click)="openDetailsWithState(l)">
         <ion-thumbnail slot="start">
-          <ion-text *ngIf="!l.links.mission_patch" class="underline-magical">{{l.flight_number}}</ion-text>
-          <img *ngIf="l.links.mission_patch" [src]="l.links.mission_patch">
+          <ion-text *ngIf="!l.links.mission_patch" class="underline-magical">{{
+            l.flight_number
+          }}</ion-text>
+          <img *ngIf="l.links.mission_patch" [src]="l.links.mission_patch" />
         </ion-thumbnail>
         <ion-label class="d-inline">
-          <h2>{{l.mission_name}}</h2>
-          <p>{{l.launch_site.site_name}}</p>
-          <p>{{l.rocket.rocket_name}}</p>
+          <h2>{{ l.mission_name }}</h2>
+          <p>{{ l.launch_site.site_name }}</p>
+          <p>{{ l.rocket.rocket_name }}</p>
         </ion-label>
         <ion-note slot="end">
           <div class="d-flex flex-column">
-            {{l.launch_date_utc | date : 'short'}}
+            {{ l.launch_date_utc | date: "short" }}
             <ng-container *ngIf="l.launch_success !== null">
-              <ion-chip outline="true" color="success" *ngIf="l.launch_success; else launch_failure">
+              <ion-chip
+                outline="true"
+                color="success"
+                *ngIf="l.launch_success; else launch_failure"
+              >
                 <ion-label color="success">Success</ion-label>
               </ion-chip>
             </ng-container>
