--- a/src/app/missions/missions.page.html
+++ b/src/app/missions/missions.page.html
@@ -1,30 +1,32 @@
 <ion-header>
-    <ion-toolbar color="primary">
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-title>Missions</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
-  <ion-content padding>
-    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
-      <ion-refresher-content></ion-refresher-content>
-    </ion-refresher>
-    <div  *ngIf="missions">
-        <ion-list >
-          <ion-item-sliding *ngFor="let m of missions">
-            <ion-item button (click)="openDetailsWithState(m)">
-              <ion-label>
-                <h2>{{m.mission_name}}</h2>
-                <p>{{m.mission_id}}</p>
-                <p>{{m.manufacturers}}</p>
-              </ion-label>
-                  <ion-chip outline="true" color="warning">
-                    <ion-label color="warning">{{m.payload_ids.length}} launches</ion-label>
-                  </ion-chip>
-            </ion-item>
-          </ion-item-sliding>
-        </ion-list>
-    </div>
-  </ion-content>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>🚀 Missions</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content padding>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <div *ngIf="missions">
+    <ion-list>
+      <ion-item-sliding *ngFor="let m of missions">
+        <ion-item button (click)="openDetailsWithState(m)">
+          <ion-label>
+            <h2>{{ m.mission_name }}</h2>
+            <p>{{ m.mission_id }}</p>
+            <p>{{ m.manufacturers }}</p>
+          </ion-label>
+          <ion-chip outline="true" color="warning">
+            <ion-label color="warning"
+              >{{ m.payload_ids.length }} launches</ion-label
+            >
+          </ion-chip>
+        </ion-item>
+      </ion-item-sliding>
+    </ion-list>
+  </div>
+</ion-content>
