--- a/src/app/launches/past-launches/past-detail/past-detail.page.html
+++ b/src/app/launches/past-launches/past-detail/past-detail.page.html
@@ -34,9 +34,10 @@
     </h5>
 
     <h5 style="text-align: center">Fusée: {{ launch.rocket.rocket_name }}</h5>
-
-    <a style="align-content: center" href="{{ launch.telemetry.flight_club }}"
-      >Telemetry</a
-    >
+    <center>
+      
+    </center>
+    <a  style="text-align: center" href="{{ launch.telemetry.flight_club }}"
+      >Telemetry</a>
   </div>
 </ion-content>
