--- a/src/app/missions/detail/detail.page.html
+++ b/src/app/missions/detail/detail.page.html
@@ -28,6 +28,12 @@
   </div>
 
   <a href="{{ mission.twitter }}"
-    ><img src="src\assets\icon\Twitter_Bird.svg.png" />
+    ><img style="width: 50px;" src="http://www.actions-boursieres.fr/wp-content/uploads/2016/10/logo-twitter.png" />
+  </a>
+  <a href="{{ mission.wikipedia }}"
+    ><img style="width: 50px;" src="https://cdn2.iconfinder.com/data/icons/social-media-with-original-colors/256/icon-wikipedia.png" />
+  </a>
+  <a href="{{ mission.website }}"
+    ><img style="width: 50px;" src="http://aux2.iconspalace.com/uploads/wordpress-flat-circle-icon-256.png" />
   </a>
 </ion-content>
