--- a/src/app/components/countdown/countdown.component.html
+++ b/src/app/components/countdown/countdown.component.html
@@ -7,7 +7,7 @@
     in {{ timer }}
   </p>
 
-  <p class="app-countdown-text">
-    🚀
-  </p>
+  <div style="text-align: center">
+      <img width="200px" src="https://cdn.dribbble.com/users/240436/screenshots/4521209/spacex.gif"/>
+    </div>
 </div>
