--- a/src/app/launches/past-launches/past-detail/past-detail.page.html
+++ b/src/app/launches/past-launches/past-detail/past-detail.page.html
@@ -34,10 +34,11 @@
     </h5>
 
     <h5 style="text-align: center">Fusée: {{ launch.rocket.rocket_name }}</h5>
-    <center>
-      
-    </center>
-    <a  style="text-align: center" href="{{ launch.telemetry.flight_club }}"
-      >Telemetry</a>
+    <div style="text-align: center">
+      <a   href="{{ launch.telemetry.flight_club }}"
+      ><img style="width: 50px;" src="https://1.bp.blogspot.com/-849buDg4fag/VvRmR6KEuVI/AAAAAAAAA9Y/XOU2H5-m530eSxHZa322_jHG4-Bv68G_Q/s320/icon_reliability.png" />
+      </a>
+    </div>
+    
   </div>
 </ion-content>
