--- a/src/app/missions/detail/detail.page.html
+++ b/src/app/missions/detail/detail.page.html
@@ -26,7 +26,7 @@
     <h5>Description :</h5>
     <p class="description">{{ mission.description }}</p>
   </div>
-
+<div style="text-align: center">
   <a href="{{ mission.twitter }}"
     ><img style="width: 50px;" src="http://www.actions-boursieres.fr/wp-content/uploads/2016/10/logo-twitter.png" />
   </a>
@@ -36,4 +36,5 @@
   <a href="{{ mission.website }}"
     ><img style="width: 50px;" src="http://aux2.iconspalace.com/uploads/wordpress-flat-circle-icon-256.png" />
   </a>
+</div>
 </ion-content>
